# R2AIBridge

./: .gitignore  BUILD_STATUS.md  BUILD_SUCCESS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  MCP_EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.gradle.kts  gradle.properties  local.properties.example  plan-r2AiBridgeAndroidApp.prompt.md  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/r2aibridge/: MainActivity.kt  R2Core.kt  ShellUtils.kt
app/src/main/java/com/r2aibridge/concurrency/: R2ConcurrencyManager.kt
app/src/main/java/com/r2aibridge/mcp/: MCPModels.kt  MCPServer.kt  R2SessionManager.kt
app/src/main/java/com/r2aibridge/service/: R2ServiceForeground.kt
app/src/main/java/com/r2aibridge/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
keystore/: r2aibridge.jks
